--- a/DungeonsAndDragons.ChartEngine/DungeonsAndDragons.ChartEngine/DungeonsAndDragons.ChartEngine.csproj
+++ b/DungeonsAndDragons.ChartEngine/DungeonsAndDragons.ChartEngine/DungeonsAndDragons.ChartEngine.csproj
@@ -37,11 +37,21 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\GemValueData.txt" />
-    <Content Include="Resources\JewelryValueData.txt" />
-    <Content Include="Resources\MagicItemData.txt" />
-    <Content Include="Resources\MagicItemSubtableName.txt" />
-    <Content Include="Resources\MonetaryChartData.txt" />
+    <Content Include="Resources\GemValueData.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\JewelryValueData.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\MagicItemData.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\MagicItemSubtableName.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\MonetaryChartData.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Charts\GetCharts.cs" />
