--- a/DungeonsAndDragons.ChartEngine/DungeonsAndDragons.ChartEngine/DungeonsAndDragons.ChartEngine.csproj
+++ b/DungeonsAndDragons.ChartEngine/DungeonsAndDragons.ChartEngine/DungeonsAndDragons.ChartEngine.csproj
@@ -61,7 +61,9 @@
     <Compile Include="Charts\Treasure\MagicItemValue.cs" />
     <Compile Include="Charts\Treasure\MonetaryTreasure.cs" />
     <Compile Include="Charts\Treasure\GemValue.cs" />
+    <Compile Include="Services\LogicRepository.cs" />
     <Compile Include="Services\OpenFile.cs" />
+    <Compile Include="Services\RandomNumberGenerator.cs" />
     <Compile Include="Test.cs" />
     <Compile Include="Utilities\Enum.cs" />
   </ItemGroup>
